--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,8 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./src/styles.css" />
+  
 
     <title>Radoslav's Website</title>
   </head>
